fluxcd/clusters/pi/home/1-external-dns/nas/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
  namespace: home
subsets:
  - addresses:
      - ip: 192.168.86.10
    ports:
      - port: 80
