fluxcd/clusters/pi/home/1-external-dns/nas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: home
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
